--- a/_config.yml
+++ b/_config.yml
@@ -244,6 +244,18 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _blogs
+  # - scope:
+  #     path: ""
+  #     type: blogs
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: true
+  #     comments: true
+
+    
+    
 
 # Sass/SCSS
 sass:
